# CellOS-QCC-Quantum-Cellular-Computing

./: directory-structure.md  situatia-fisierelor-27032025.docx
QCC/: .gitignore  CONTRIBUTING.md  FAQ.md  LICENSE.md  README.md  SECURITY.md  cell_config.yaml  code-of-conduct.md  config.yaml  development.yaml  leftoff-prompt.docx  logging.yaml  main.py  production.yaml  pyproject.toml  requirements.txt  server.py  setup.py  test.yaml
QCC/config/: config.yaml  development.yaml  logging.yaml  production.yaml  test.yaml
QCC/docs/api/: api-overview.md  assembler-api.md  cell-api.md  provider-api.md  quantum-trail-api.md
QCC/docs/architecture/: component-architecture.md  qcc-overview.md  security-architecture.md
QCC/docs/tutorials/: creating-cells.md  getting-started.md
QCC/docs/whitepaper/: QCC.tex
QCC/examples/: README.md
QCC/examples/file-manager/: README.md  manager.py
QCC/examples/media-player/: README.md  player.py
QCC/examples/simple-editor/: README.md  main.py
QCC/src/assembler/: README.md
QCC/src/assembler/core/: __init__.py  assembler.py  cell_configuration.py  exceptions.py  solution.py
QCC/src/assembler/intent/: __init__.py  (+3 more)
QCC/src/cells/: README.md
QCC/src/common/: __init__.py  exceptions.py  models.py
QCC/src/providers/: README.md  api.py
QCC/src/qcc/: __init__.py  cli.py  config.py  config_helpers.py
QCC/src/quantum-trail/: README.md
QCC/tests/: __init__.py  conftest.py
QCC/tests/integration/: __init__.py  test_system.py
QCC/tests/performance/: __init__.py  test_performance.py
QCC/tests/unit/: __init__.py  test_assembler.py  test_cells.py
QCC/tools/development/: dev_tools.py
QCC/tools/simulation/: simulator.py
QCC/tools/visualization/: visualizer.py
(+75 files in other folders)
